# meli_ai_challenge

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  test_agents.py  train_model.py
agents/: ai_config.py  decision_agent.py  flow.py  flow_raw.py  ingest_agent.py
agents/tools/: ai_tools.py
app/: main.py
models/: config.py  functions.py  loader.py  train_model.py
models.egg-info/: PKG-INFO  SOURCES.txt
models/exports/: cybersecurity_model_v0.joblib
notebooks/: EDA.ipynb  EDA_multiclass copy.ipynb  EDA_multiclass.ipynb  agent_draw.ipynb
